--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                            <input type="text" id="quantity-phone" class="form-control text-center" value="1">
                            <button class="btn btn-default"><i id="btn-plus-phone" class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$ <span id="phone-price">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -49,7 +49,7 @@
                            <button id="btn-plus-case" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5>$ <span id="case-price">59</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
