--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i id="btn-minus-phone" class="fas fa-minus"></i></button>
+                           <button id="btn-minus-phone" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input type="text" id="quantity-phone" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i id="btn-plus-phone" class="fas fa-plus"></i></button>
+                           <button id="btn-plus-phone" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5>$ <span id="phone-price">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
@@ -65,9 +65,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="sub-total">1278</span></h5>
+                        <h5>$ <span id="tax">0</span></h5>
+                        <h5>$ <span id="total">1278</span></h5>
                      </div>
                   </div>
                </div>
